<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="@dimen/x192"
        android:layout_height="@dimen/y162"
        android:layout_marginLeft="@dimen/x464"
        android:layout_marginTop="@dimen/y58"
        android:background="@drawable/image_screen_playnext_bg"/>
    <Button
        android:id="@+id/screen_control_btn_playnext"
        android:tag="screen_control_btn_playnext"
        android:layout_marginLeft="@dimen/x464"
        android:layout_marginTop="@dimen/y58"
        android:layout_width="@dimen/x192"
        android:layout_height="@dimen/y162"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/y100"
        android:text="@string/screen_control_btn_playnext"
        android:textSize="@dimen/font_28"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/colorHomePrimary"
        android:textAllCaps="false"
        android:focusable="true"
        android:focusedByDefault="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_screen_playnext"/>

    <ImageView
        android:layout_marginLeft="@dimen/x686"
        android:layout_marginTop="@dimen/y58"
        android:layout_width="@dimen/x768"
        android:layout_height="@dimen/y162"
        android:background="@drawable/image_screen_control_else_bg"/>
    <Button
        android:id="@+id/screen_control_btn_yuanchang"
        android:tag="screen_control_btn_yuanchang"
        android:layout_marginLeft="@dimen/x686"
        android:layout_marginTop="@dimen/y58"
        android:layout_width="@dimen/x192"
        android:layout_height="@dimen/y162"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/y100"
        android:text="@string/screen_control_btn_yuanchang"
        android:textSize="@dimen/font_28"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/colorHomePrimary"
        android:textAllCaps="false"
        android:focusable="true"
        android:focusedByDefault="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_screen_yuanchang"/>
    <Button
        android:id="@+id/screen_control_btn_banchang"
        android:tag="screen_control_btn_banchang"
        android:layout_marginLeft="@dimen/x686"
        android:layout_marginTop="@dimen/y58"
        android:layout_width="@dimen/x192"
        android:layout_height="@dimen/y162"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/y100"
        android:text="@string/screen_control_btn_banchang"
        android:textSize="@dimen/font_28"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/colorHomePrimary"
        android:textAllCaps="false"
        android:focusable="true"
        android:focusedByDefault="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_screen_banchang"/>
    <Button
        android:id="@+id/screen_control_btn_pause"
        android:tag="screen_control_btn_pause"
        android:layout_marginLeft="@dimen/x878"
        android:layout_marginTop="@dimen/y58"
        android:layout_width="@dimen/x192"
        android:layout_height="@dimen/y162"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/y100"
        android:text="@string/screen_control_btn_pause"
        android:textSize="@dimen/font_28"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/colorHomePrimary"
        android:textAllCaps="false"
        android:focusable="true"
        android:focusedByDefault="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_screen_pause"/>
    <Button
        android:id="@+id/screen_control_btn_play"
        android:tag="screen_control_btn_play"
        android:layout_marginLeft="@dimen/x878"
        android:layout_marginTop="@dimen/y58"
        android:layout_width="@dimen/x192"
        android:layout_height="@dimen/y162"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/y100"
        android:text="@string/screen_control_btn_play"
        android:textSize="@dimen/font_28"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/colorHomePrimary"
        android:textAllCaps="false"
        android:focusable="true"
        android:focusedByDefault="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_screen_play"/>
    <Button
        android:id="@+id/screen_control_btn_mutex"
        android:tag="screen_control_btn_mutex"
        android:layout_marginLeft="@dimen/x1070"
        android:layout_marginTop="@dimen/y58"
        android:layout_width="@dimen/x192"
        android:layout_height="@dimen/y162"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/y100"
        android:text="@string/screen_control_btn_mutex"
        android:textSize="@dimen/font_28"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/colorHomePrimary"
        android:textAllCaps="false"
        android:focusable="true"
        android:focusedByDefault="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_screen_mute"/>
    <Button
        android:id="@+id/screen_control_btn_unmutex"
        android:tag="screen_control_btn_unmutex"
        android:layout_marginLeft="@dimen/x1070"
        android:layout_marginTop="@dimen/y58"
        android:layout_width="@dimen/x192"
        android:layout_height="@dimen/y162"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/y100"
        android:text="@string/screen_control_btn_unmutex"
        android:textSize="@dimen/font_28"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/colorHomePrimary"
        android:textAllCaps="false"
        android:focusable="true"
        android:focusedByDefault="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_screen_unmute"/>
    <Button
        android:id="@+id/screen_control_btn_replay"
        android:tag="screen_control_btn_replay"
        android:layout_marginLeft="@dimen/x1262"
        android:layout_marginTop="@dimen/y58"
        android:layout_width="@dimen/x192"
        android:layout_height="@dimen/y162"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/y100"
        android:text="@string/screen_control_btn_replay"
        android:textSize="@dimen/font_28"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/colorHomePrimary"
        android:textAllCaps="false"
        android:focusable="true"
        android:focusedByDefault="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/btn_screen_replay"/>
</RelativeLayout>