<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.shinetvbox.vod.view.fragment.home.MyViewPager
        android:id="@+id/fenleidiange_viewPager_content"
        android:layout_width="@dimen/x1500"
        android:layout_height="@dimen/y624"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y270"/>
    <TextView
        android:tag="app_home_fenleidiange"
        android:layout_width="@dimen/x800"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x86"
        android:layout_marginTop="@dimen/y36"
        android:lines="1"
        android:ellipsize="end"
        android:textSize="@dimen/font_50"
        android:textColor="@color/colorHomePrimary"
        android:text="@string/app_home_fenleidiange"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y190"
        android:orientation="horizontal">
        <Button
            android:id="@+id/fenleidiange_btn_type_yuzhong"
            android:tag="fenleidiange_btn_type_yuzhong"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y78"
            android:layout_marginLeft="@dimen/x134"
            android:gravity="center"
            android:text="@string/fenleidiange_btn_type_yuzhong"
            android:textSize="@dimen/font_40"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorHomePrimary"
            android:textAllCaps="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/btn_diangetai_fenleidiange_type"/>
        <Button
            android:id="@+id/fenleidiange_btn_type_zhuti"
            android:tag="fenleidiange_btn_type_zhuti"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y78"
            android:layout_marginLeft="@dimen/x10"
            android:gravity="center"
            android:text="@string/fenleidiange_btn_type_zhuti"
            android:textSize="@dimen/font_40"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAllCaps="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/colorHomePrimary"
            android:background="@drawable/btn_diangetai_fenleidiange_type"/>
        <Button
            android:id="@+id/fenleidiange_btn_type_zongyi"
            android:tag="fenleidiange_btn_type_zongyi"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y78"
            android:layout_marginLeft="@dimen/x10"
            android:gravity="center"
            android:text="@string/fenleidiange_btn_type_zongyi"
            android:textSize="@dimen/font_40"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorHomePrimary"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textAllCaps="false"
            android:background="@drawable/btn_diangetai_fenleidiange_type"/>
        <Button
            android:id="@+id/fenleidiange_btn_type_xiqu"
            android:tag="fenleidiange_btn_type_xiqu"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y78"
            android:layout_marginLeft="@dimen/x10"
            android:gravity="center"
            android:text="@string/fenleidiange_btn_type_xiqu"
            android:textSize="@dimen/font_40"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorHomePrimary"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textAllCaps="false"
            android:background="@drawable/btn_diangetai_fenleidiange_type"/>
    </LinearLayout>
</RelativeLayout>