<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x1920"
    android:layout_height="@dimen/y1080">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:background="@color/colorUpdateAppBackground"/>
    <TextView
        android:tag="updateapp_textview_title"
        android:layout_width="@dimen/x600"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y60"
        android:textSize="@dimen/font_56"
        android:gravity="center"
        android:text="@string/updateapp_textview_title"
        android:textColor="@color/colorUpdateAppTitle"
        android:lines="1"
        android:ellipsize="end"/>
    <TextView
        android:id="@+id/updateapp_textview_version"
        android:tag="updateapp_textview_version"
        android:layout_width="@dimen/x1520"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x200"
        android:layout_marginTop="@dimen/y236"
        android:textSize="@dimen/font_42"
        android:text="@string/updateapp_textview_version"
        android:textColor="@color/colorUpdateAppVersion"
        android:maxLines="1"
        android:ellipsize="end"/>
        <TextView
            android:id="@+id/updateapp_textview_describe"
            android:layout_width="@dimen/x1520"
            android:layout_height="@dimen/y520"
            android:layout_marginLeft="@dimen/x200"
            android:layout_marginTop="@dimen/y330"
            android:textSize="@dimen/font_42"
            android:paddingHorizontal="@dimen/x12"
            android:paddingVertical="@dimen/y6"
            android:lineSpacingExtra="@dimen/y15"
            android:textColor="@color/colorUpdateAppContent"
            android:background="@color/color111111"/>
        <Button
            android:id="@+id/updateapp_btn_sure"
            android:tag="updateapp_btn_sure"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y78"
            android:layout_marginLeft="@dimen/x600"
            android:layout_marginTop="@dimen/y950"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/updateapp_btn_sure"
            android:textAllCaps="false"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="@dimen/font_42"
            android:textColor="@color/btn_keyboard_alphabet"
            android:background="@drawable/btn_updateapp_sure"/>
        <Button
            android:id="@+id/updateapp_btn_cancel"
            android:tag="updateapp_btn_cancel"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y78"
            android:layout_marginLeft="@dimen/x1080"
            android:layout_marginTop="@dimen/y950"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/updateapp_btn_cancel"
            android:textAllCaps="false"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="@dimen/font_42"
            android:textColor="@color/btn_keyboard_alphabet"
            android:background="@drawable/btn_updateapp_sure"/>
    <ProgressBar
        android:id="@+id/updateapp_progressbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="@dimen/x1360"
        android:layout_height="@dimen/y10"
        android:layout_marginTop="@dimen/y900"
        android:layout_centerHorizontal="true"
        android:progressDrawable="@drawable/progressbar_updateapp_loading"
        android:visibility="gone"/>
</RelativeLayout>